--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -86,6 +86,7 @@ a {
     @media (min-width: 561px) {
       .header__bg {
         width: 40%;
+        min-width: 400px;
         padding: 16px 40px; } }
   .header h1 {
     margin: 0;
@@ -392,6 +393,7 @@ a {
   line-height: 25px;
   color: #948C76;
   background-color: #F9F8F5;
+  z-index: 1;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
