--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -229,6 +229,8 @@ a {
         display: block;
         width: 49%; }
 
+.works__block__textbox__upper {
+  font-weight: bold; }
 .works__block__textbox__lower li {
   list-style-type: disc;
   list-style: inside; }
@@ -264,6 +266,7 @@ a {
         text-decoration: underline; }
       .works__block__textbox__lower li {
         margin: 4px 0;
+        text-align: left;
         font-size: 12px;
         font-size: 0.75rem; } }
 @media (min-width: 561px) {
@@ -404,5 +407,8 @@ a {
     .question-box li span {
       display: block;
       width: 50%; }
+
+.empty-star {
+  color: #dddddd; }
 
 /*# sourceMappingURL=style.css.map */
