--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -242,17 +242,19 @@ a {
     margin: 16px auto 24px;
     color: #fff; }
     .works__block__image {
+      height: 100%;
       position: absolute;
       top: 0;
       right: 0;
-      left: 0; }
+      left: 0;
+      overflow: hidden; }
       .works__block__image img {
-        width: 100%;
+        height: 100%;
         z-index: 1; }
     .works__block__textbox {
       position: absolute;
       width: 85%;
-      height: 50%;
+      height: 60%;
       top: 0;
       right: 0;
       bottom: 0;
