--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,7 +69,11 @@
     padding: 16px;
   }
   
-  @media #{$more-than-tb}{
+  @media #{$tb-size}{
+    padding: 40px;
+  }
+  
+  @media #{$pc-size}{
     padding: 32px 56px 0;
     margin: auto;
   }
@@ -134,7 +138,7 @@
   
   &__textbox{
     color: $text-color;
-    font-family: $contents-font;
+    font-family: $main-font;
     
     @media #{$sp-size}{
       margin: 0 auto;
@@ -235,6 +239,71 @@
   //   }
   // }
 }
+
+.bubble-wrapper{
+  position: absolute;
+  
+  @media #{$pc-size}{
+    top: 0;
+    right: 40px;
+  }
+  
+  @media #{$tb-size}{
+    top: -20px;
+    right: 0;
+  }
+  
+  @media #{$sp-size}{
+    top: -45px;
+    right: 0;
+  }
+}
+
+.bubble-box{
+  position: relative;
+}
+
+.bubble{
+  position: relative;
+  padding: 16px 8px;
+  background-color: #0069D9;
+  @include border-radius(5px);
+  
+  @media #{$tb-size}{
+    padding: 8px;
+  }
+  
+  @media #{$sp-size}{
+    padding: 8px 4px;
+  }
+  
+  &__text{
+    color: #fff;
+    font-weight: bold;
+    font-family: $main-font;
+    
+    @media #{$tb-size}{
+      @include fontsize(14);
+    }
+    
+    @media #{$sp-size}{
+      @include fontsize(10);
+    }
+  }
+}
+
+.arrow{
+  position: absolute;
+  width: 20px;
+  height: 50px;
+  bottom: -40px;
+  right: 30px;
+  border-top: #0069D9 25px solid;
+  border-left: transparent 10px solid;
+  border-right: transparent 10px solid;
+  @include transform(rotate(20deg));
+}
+
 .works__block{
   
   &__textbox{
@@ -279,7 +348,7 @@
       left: 0;
       z-index: 3;
       margin: auto;
-      font-family: $mask-font;
+      font-family: $mask_font;
       
       
       p, ul, a{
@@ -346,7 +415,7 @@
       width: 65%;
       padding-left: 24px;
       color: $text-color;
-      font-family: $contents-font;
+      font-family: $mask_font;
       
       &__lower li{
         margin: 8px 0;
@@ -392,7 +461,7 @@
   }
   
   @media #{$more-than-tb}{
-    width: 50%;
+    width: 60%;
     justify-content: space-around;
   }
   
